--- a/portolio_other/index.html
+++ b/portolio_other/index.html
@@ -13,6 +13,19 @@
         <div class="header">
             <h1>Колесников Иван</h1>
             <p class="subtitle">Флирансер, веб-разработчик, <br>создание сайтов</p>
+            <div class="countdown">
+                <p class="countdown__title">До Нового Года осталось:</p>
+                <div class="countdown__content">
+                    <span class="count" id="days"></span>
+                    <span class="count__descr">дней</span>
+                    <span class="count" id="hours"></span>
+                    <span class="count__descr">часов</span>
+                    <span class="count" id="minutes"></span>
+                    <span class="count__descr">минут</span>
+                    <span class="count" id="seconds"></span>
+                    <span class="count__descr">секунд</span>
+                </div>
+            </div>
                 <div class="header-arrow">
                     <a href="#portfolio" id="arrow-link"><img src="img/arrow.png" alt=""></a>
                 </div>
@@ -83,5 +96,6 @@
   integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
   crossorigin="anonymous"></script>
   <script src="js/main.js"></script>
+  <script src="./js/countdowm.js"></script>
 </body>
 </html>
